<resources>
    <string name="app_name">GDAX Trader</string>
    <string name="spread">Spread</string>
    <string name="signin">Sign in</string>
    <string name="orderbook">Order Book</string>
    <string name="api_key">API Key</string>
    <string name="api_secret">API Secret</string>
    <string name="save">Save</string>
    <string name="api_passphrase">Passphrase</string>
    <string name="not_empty">This field cannot be empty</string>
    <string name="setup">Setup</string>
    <string name="api_error_title">An unexpected error occurred</string>
    <string name="api_error_http_message">(HTTP Response: %d)</string>
    <string name="accounts">Accounts</string>
    <string name="account_activity_detail">Details</string>
    <string name="id">ID</string>
    <string name="created_at">Created at</string>
    <string name="amount">Amount</string>
    <string name="balance">Balance</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="no_activity">No activity</string>
    <string name="place_order">Place Order</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="orders">Orders</string>
    <string name="fills">Fills</string>
    <string name="market">Market</string>
    <string name="limit">Limit</string>
    <string name="stop">Stop</string>
    <string name="amount_zero">0.00</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="error_amount_not_greater_than_zero">Amount must be greater than zero</string>
    <string name="error_amount_not_valid">Amount is not valid</string>
    <string name="side">Side</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="status">Status</string>
    <string name="no_orders">No orders</string>
    <string name="product">Product</string>
    <string name="order_total">Total (%s) ≈ %s</string>
    <string name="current_price">1 %S = %s %s</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="no_fills">No fills</string>
    <string name="fee">Fee</string>
    <string name="help">Help</string>
    <string name="bank_account">Bank Account</string>
    <string name="coinbase">Coinbase</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="from_bank_account">From Bank Account</string>
    <string name="from_coinbase">From CoinBase Account</string>
    <string name="to_bank_account">To Bank Account</string>
    <string name="to_coinbase">To CoinBase Account</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome to GDAX Trader!</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="volume">Volume</string>
    <string name="last">Last</string>
    <string name="last_trade_price">Last trade price</string>
    <string name="volume_24h">24 hour volume</string>
    <string name="open_24h">24 hour open</string>
    <string name="high_24h">24 hour high</string>
    <string name="low_24h">24 hour low</string>
    <string name="activity_24h">24 hour activity</string>
    <string name="change_24h">Change</string>
    <string name="change">Change</string>
    <string name="candles">Candles</string>
    <string name="deposit_success_title">Deposit Success</string>
    <string name="deposit_success_message">A deposit has been placed and will be processed shortly.</string>
    <string name="withdraw_success_title">Withdraw Success</string>
    <string name="withdraw_success_message">A withdraw has been placed and will be processed shortly.</string>
    <string name="two_fa">Two-Factor Code</string>
    <string name="get_code">Get Code</string>
    <string name="code_zero">0000</string>
    <string name="granularity">Granularity</string>
    <string name="one_minute">1m</string>
    <string name="five_minutes">5m</string>
    <string name="fifteen_minutes">15m</string>
    <string name="one_hour">1h</string>
    <string name="six_hours">6h</string>
    <string name="one_day">1d</string>
    <string name="close">Close</string>
    <string name="null_value">-</string>
    <string name="nag_text">Support development of GDAX Trader!</string>
    <string name="unlock">Unlock</string>
</resources>
