<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    >

    <TextView
        android:id="@+id/label_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to"
        />

    <Spinner
        android:id="@+id/to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_to"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/label_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/to"
        android:text="@string/amount"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_amount"
        android:layout_marginTop="10dp"
        android:inputType="numberDecimal"
        android:hint="@string/amount_zero"
        />

    <TextView
        android:id="@+id/label_2fa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/amount"
        android:text="@string/two_fa"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/two_fa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/label_2fa"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@id/get_code"
        android:inputType="number"
        android:hint="@string/code_zero"
        android:paddingEnd="10dp"
        />

    <Button
        android:id="@+id/get_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/label_2fa"
        android:text="@string/get_code"
        android:background="@color/colorPrimaryDark"
        />

    <Button
        android:id="@+id/commit"
        android:text="@string/withdraw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        />


</RelativeLayout>
