<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="15dp"
              android:paddingRight="15dp"
              android:paddingTop="10dp"
              android:paddingBottom="10dp"
    >

    <TextView
        android:text="@string/type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textStyle="bold"
        />

    <TextView
        android:text="@string/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <TextView
        android:text="@string/amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textAlignment="textEnd"
        />

    <TextView
        android:text="@string/balance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textAlignment="textEnd"
        />

</LinearLayout>