<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardBackgroundColor="@color/cardview_dark_background"
    card_view:cardCornerRadius="4dp"
    card_view:contentPadding="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_24h"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:paddingTop="10dp"
            >

            <TableRow>
                <TextView
                    android:text="@string/open"
                    />
                <TextView
                    android:id="@+id/open"
                    android:gravity="end|center_vertical"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/high"
                    />
                <TextView
                    android:id="@+id/high"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="end|center_vertical"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/low"
                    />
                <TextView
                    android:id="@+id/low"
                    android:gravity="end|center_vertical"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/volume"
                    />
                <TextView
                    android:id="@+id/volume"
                    android:gravity="end|center_vertical"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/last_trade_price"
                    />
                <TextView
                    android:id="@+id/last"
                    android:gravity="end|center_vertical"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/change"
                    />
                <TextView
                    android:id="@+id/change"
                    android:gravity="end|center_vertical"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>