<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    >

    <TextView
        android:id="@+id/label_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/from"
        />

    <Spinner
        android:id="@+id/from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_from"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/label_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/from"
        android:text="@string/amount"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_amount"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/commit"
        android:text="@string/deposit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        />


</RelativeLayout>
